# ffxiv-act-linux-interface

./: .gitignore  LICENSE  NOTICE  README.md
ffxiv-act-linux-client/: Cargo.toml  config.json
ffxiv-act-linux-client/src/: internal_models.rs  main.rs  models.rs
ffxiv-act-linux-host/: Cargo.toml  allow_pcap.sh  config.json  signatures_64.json
ffxiv-act-linux-host/src/: main.rs  signatures.rs  utils.rs
ffxiv-act-linux-host/src/mem/: host_server.rs  mod.rs  models.rs  packets.rs  reader.rs
ffxiv-act-linux-host/src/net/: mod.rs
