[package]
name = "ffxiv-act-linux-client"
version = "0.1.0"
authors = ["kate"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
byteorder = "1.3.2"
flate2 = "1.0.11"
bincode = "1.1.4"
