[package]
name = "ffxiv_act_linux_host"
version = "0.1.0"
authors = ["Cerulan Lumina"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read-process-memory = "0.1.2"
byteorder = "1.3.2"
proc-maps = "0.1.6"
serde = { version = "1.0.99", features = ["derive"]}
serde_json = "1.0.40"
hex = "0.3.2"
pcap = "0.7.0"
etherparse = "0.8.2"
bincode = "1.1.4"
flate2 = "1.0.11"
regex = "1.2.1"